--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".views.main.MainActivity">
 
     <FrameLayout
-        android:id="@+id/frame"
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,15 +24,17 @@
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <ImageButton
+        android:id="@+id/ib_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_add"
-        android:tint="@color/secondaryColorPrimaryDark"
         app:layout_constraintStart_toStartOf="@id/btn_NavMain"
         app:layout_constraintEnd_toEndOf="@id/btn_NavMain"
         app:layout_constraintTop_toTopOf="@id/btn_NavMain"
         app:layout_constraintBottom_toBottomOf="@id/btn_NavMain"
         android:elevation="8dp"/>
+<!--        android:tint="@color/secondaryColorPrimaryDark"-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
