--- a/app/src/main/res/layout/layout_empty_task.xml
+++ b/app/src/main/res/layout/layout_empty_task.xml
@@ -3,12 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:gravity="center"
-    android:layout_gravity="center_vertical">
+    android:gravity="center">
 
     <ImageView
-        android:layout_width="260dp"
-        android:layout_height="260dp"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:src="@drawable/empty_task"/>
 
     <TextView
