--- a/app/src/main/res/layout/layout_empty_task.xml
+++ b/app/src/main/res/layout/layout_empty_task.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/lets"
+        android:text="Let's More Productive"
         android:textSize="16sp"
         android:textColor="#000000"
         android:layout_marginTop="8dp"/>
