--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,12 +3,12 @@
 
     <item
         android:id="@+id/action_home"
-        android:title="@string/home"
+        android:title="Home"
         android:icon="@drawable/ic_home"/>
 
     <item
         android:id="@+id/action_taskComplete"
-        android:title="@string/task_complete"
+        android:title="Task Complete"
         android:icon="@drawable/ic_done"/>
 
 </menu>
