--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="secondaryColorPrimary">#5BC0BE</color>
     <color name="secondaryColorPrimaryDark">#1E8F8E</color>
     <color name="secondaryColorLight">#8FF3F1</color>
+
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="gray">#616161</color>
 </resources>
