--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -25,6 +25,9 @@
             android:paddingEnd="8dp"
             android:paddingBottom="4dp"
             android:paddingTop="4dp"
+            android:background="@drawable/bg_date_task"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@id/tv_titleTask"
             android:gravity="center_vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -47,7 +50,7 @@
             android:textStyle="bold"
             android:textColor="@color/secondaryColorPrimaryDark"
             android:textSize="16sp"
-            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toTopOf="@id/lineTask"
             app:layout_constraintTop_toBottomOf="@id/containerDateTask"
             app:layout_constraintStart_toStartOf="parent"/>
 
@@ -59,12 +62,25 @@
             android:layout_marginTop="12dp"
             app:layout_constraintTop_toBottomOf="@id/tv_titleTask"/>
 
+        <ImageButton
+            android:id="@+id/btn_doneTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_done_task"
+            android:background="@android:color/transparent"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/containerDateTask"
+            app:layout_constraintBottom_toBottomOf="@id/tv_titleTask"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_subTask"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="16dp"
+            tools:itemCount="4"
+            tools:listitem="@layout/item_sub_task"
             app:layout_constraintTop_toBottomOf="@id/lineTask"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
