--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,6 +9,6 @@
     <item
         android:id="@+id/action_taskComplete"
         android:title="Task Complete"
-        android:icon="@drawable/ic_done"/>
+        android:icon="@drawable/ic_complete_task"/>
 
 </menu>
