--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -81,6 +81,7 @@
             android:layout_marginEnd="16dp"
             tools:itemCount="4"
             tools:listitem="@layout/item_sub_task"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/lineTask"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
