modify task and subTask adapter

--- a/app/src/main/res/layout/fragment_task_complete.xml
+++ b/app/src/main/res/layout/fragment_task_complete.xml
@@ -67,6 +67,7 @@
                 tools:listitem="@layout/item_task"
                 android:visibility="gone"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:layout_marginBottom="80dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
