--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AppTheme.ActionBar">
+        <item name="colorControlNormal">@android:color/darker_gray</item>
+    </style>
+
+    <style name="AppTheme"></style>
+
 </resources>
