--- a/app/src/main/res/drawable/bg_btn_add_date_task.xml
+++ b/app/src/main/res/drawable/bg_btn_add_date_task.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/secondaryColorPrimaryDark">
+    android:color="@android:color/darker_gray">
 
     <item>
         <shape android:shape="rectangle">
-            <stroke android:color="@color/secondaryColorPrimaryDark" android:width="1dp"/>
             <corners android:radius="4dp"/>
-            <solid android:color="@color/white"/>
+            <stroke android:width="1dp" android:color="@color/secondaryColorPrimaryDark"/>
+            <solid android:color="@android:color/white"/>
         </shape>
     </item>
 
