--- a/app/src/main/res/drawable/bg_date_task.xml
+++ b/app/src/main/res/drawable/bg_date_task.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="@color/gray" android:width="1dp"/>
+    <stroke android:color="@android:color/darker_gray" android:width="1dp"/>
     <corners android:radius="4dp"/>
+
 </shape>
