--- a/app/src/main/res/drawable/bg_submit_task.xml
+++ b/app/src/main/res/drawable/bg_submit_task.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/secondaryColorPrimaryDark">
+    android:color="@android:color/white">
 
     <item>
         <shape android:shape="rectangle">
             <stroke android:color="@color/secondaryColorPrimaryDark" android:width="1dp"/>
-            <corners android:radius="28dp"/>
-            <solid android:color="@color/white"/>
+            <corners android:radius="24dp"/>
         </shape>
     </item>
-
 
 </ripple>
