--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,15 +25,15 @@
         android:layout_gravity="center"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:layout_marginTop="12dp"/>
 
     <TextView
         android:id="@+id/tv_Lets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Let's More Productive"
-        android:textColor="@color/colorPrimary"
+        android:text="Let's More Productive!"
+        android:textColor="@android:color/white"
         android:layout_marginTop="4dp"
         android:layout_gravity="center"/>
 
