--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,16 +6,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".views.home.HomeFragment">
 
-
-    <include
+    <LinearLayout
         android:id="@+id/layoutEmptyTask"
-        layout="@layout/layout_empty_task"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_vertical">
+
+        <include
+            layout="@layout/layout_empty_task"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -27,41 +35,40 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/iv_navbarHome"
+                android:id="@+id/imageViewNavBarHome"
                 android:layout_width="match_parent"
                 android:layout_height="140dp"
                 android:src="@drawable/nav_bar_home"
+                android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:scaleType="centerCrop"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="My Task"
+                android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="32sp"
-                android:textColor="@color/white"
+                android:layout_margin="16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"/>
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_task"
+                android:id="@+id/rvTask"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:clipToPadding="false"
                 tools:listitem="@layout/item_task"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:visibility="gone"
                 app:layout_constraintVertical_bias="0.0"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_navbarHome"/>
+                app:layout_constraintTop_toBottomOf="@id/imageViewNavBarHome"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
