--- a/app/src/main/res/layout/item_add_sub_task.xml
+++ b/app/src/main/res/layout/item_add_sub_task.xml
@@ -12,9 +12,9 @@
         android:id="@+id/btnCompleteSubTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
         android:src="@drawable/ic_done_task"
-        app:tint="@android:color/darker_gray"
-        android:background="@android:color/transparent"/>
+        app:tint="@android:color/darker_gray" />
 
     <EditText
         android:id="@+id/etTitleSubTask"
