--- a/app/src/main/res/layout/item_sub_task.xml
+++ b/app/src/main/res/layout/item_sub_task.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="8dp"
+    android:gravity="center_vertical">
 
     <ImageButton
-        android:id="@+id/btn_doneSubTask"
+        android:id="@+id/btnDoneSubTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_done_task"
+        app:tint="@color/secondaryColorPrimaryDark"
         android:background="@android:color/transparent"/>
 
     <TextView
-        android:id="@+id/tv_titleSubTask"
+        android:id="@+id/tvTitleSubTask"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        tools:text ="Kerjakan visikom..."/>
+        tools:text="Cari uang terlebih dahulu"
+        android:layout_marginStart="8dp"/>
 
 </LinearLayout>
