--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -22,8 +22,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp"
             android:paddingBottom="4dp"
             android:paddingTop="4dp"
             android:background="@drawable/bg_date_task"
@@ -38,8 +38,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Fri, May 1"
-                android:drawableLeft="@drawable/ic_date"
-                android:layout_marginStart="4dp"/>
+                android:textColor="@color/secondaryColorPrimaryDark"
+                android:drawablePadding="4dp"
+                android:drawableTint="@color/secondaryColorPrimaryDark"
+                app:drawableLeftCompat="@drawable/ic_date" />
 
         </LinearLayout>
 
@@ -51,8 +53,19 @@
             android:textStyle="bold"
             android:textColor="@color/secondaryColorPrimaryDark"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@id/lineTask"
+            app:layout_constraintBottom_toTopOf="@id/tv_detailTask"
             app:layout_constraintTop_toBottomOf="@id/containerDateTask"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_detailTask"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Trip to Paris"
+            android:textSize="16sp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintBottom_toTopOf="@id/lineTask"
+            app:layout_constraintTop_toBottomOf="@id/tv_titleTask"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <View
@@ -61,13 +74,14 @@
             android:layout_height="1dp"
             android:background="@color/secondaryColorPrimaryDark"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_titleTask"/>
+            app:layout_constraintTop_toBottomOf="@id/tv_detailTask"/>
 
         <ImageButton
             android:id="@+id/btn_doneTask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_done_task"
+            app:tint="@color/secondaryColorPrimaryDark"
             android:background="@android:color/transparent"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
