--- a/app/src/main/res/layout/layout_empty_task.xml
+++ b/app/src/main/res/layout/layout_empty_task.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:gravity="center">
 
     <ImageView
-        android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:src="@drawable/empty_task"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Let's More Productive"
+        android:text="Let's More Productive!"
         android:textSize="16sp"
-        android:textColor="@color/black"
+        android:textColor="@android:color/black"
         android:layout_marginTop="8dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Tell me what you want to do!"
-        android:textColor="@color/gray"
+        android:text="Tell me what you want to do"
         android:layout_marginTop="4dp"/>
 
 </LinearLayout>
